Css only version

--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <html>
 <head>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <!-- <canvas id="mainCanvas"></canvas> -->
-    <!-- <img src="images/spoke01.png" class="spokeImage"> -->
+    <div id="stage">
+        <img src="images/spoke_big_01.png" class="spokeImage">
+        <img src="images/spoke_big_01.png" class="spokeImage">
+        <img src="images/spoke_big_02.png" class="spokeImage">
+        <img src="images/spoke_big_02.png" class="spokeImage">
+        <img src="images/spoke_big_01.png" class="spokeImage">
+        <img src="images/spoke_big_02.png" class="spokeImage">
+        <img src="images/spoke_big_01.png" class="spokeImage">
+        <img src="images/spoke_big_01.png" class="spokeImage">
+        <img src="images/spoke_big_02.png" class="spokeImage">
+        <img src="images/spoke_big_02.png" class="spokeImage">
+        
+        <img src="images/spoke_big_02.png" class="spokeImage">
+        <img src="images/spoke_big_01.png" class="spokeImage">
+        <img src="images/spoke_big_01.png" class="spokeImage">
+        <img src="images/spoke_big_02.png" class="spokeImage">
+        <img src="images/spoke_big_01.png" class="spokeImage">
+    </div>
 </body>
 </html>
